--- a/css/styles.css
+++ b/css/styles.css
@@ -62,8 +62,9 @@ body {
     color: #2E2F42;
 }
 
-.header-link:is(:hover, :focus) {
-    color: #4D5AE5;
+.header-link:hover,
+.header-link:focus {
+    color: #404bbf;
 }
 
 .header-item {}
@@ -82,10 +83,11 @@ body {
     color: #434455;
 }
 
-.header-contact-link:is(:hover, :focus) {
-    color: #4D5AE5;
-
+.header-contact-link:hover,
+.header-contact-link:focus {
+    color: #404bbf;
 }
+
 
 /*---------------HERO---------------*/
 .hero {
@@ -111,7 +113,8 @@ body {
     background-color: #4D5AE5;
 }
 
-.hero-btn:is(:hover, :focus) {
+.hero-btn:hover,
+.hero-btn:focus {
     color: #4D5AE5;
     background-color: #FFFFFF;
 }
@@ -243,7 +246,8 @@ body {
     background: #F4F4FD;
 }
 
-.portfolio-btn:is(:hover, :focus) {
+.portfolio-btn:hover,
+.portfolio-btn:focus {
     color: #FFFFFF;
     background: #404BBF;
 }
