--- a/css/styles.css
+++ b/css/styles.css
@@ -258,7 +258,12 @@ body {
     background: #404BBF;
 }
 
-.portfolio-title {
+/*---------------PORTFOLIO BANKING---------------*/
+.banking-list {}
+
+.banking-item {}
+
+.banking-title {
     font-weight: var(--portfolio-title-font-weight, 500);
     font-size: 20px;
     line-height: 1.2;
@@ -266,7 +271,49 @@ body {
     color: var(--portfolio-title-color, #2E2F42);
 }
 
-.portfolio-text {
+.banking-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--portfolio-text-color, #2E2F42);
+}
+
+/*---------------PORTFOLIO BANKING---------------*/
+.service-list {}
+
+.service-item {}
+
+.service-title {
+    font-weight: var(--portfolio-title-font-weight, 500);
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--portfolio-title-color, #2E2F42);
+}
+
+.service-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--portfolio-text-color, #2E2F42);
+}
+
+/*---------------PORTFOLIO BANKING---------------*/
+.concept-list {}
+
+.list {}
+
+.concept-item {}
+
+.concept-titile {
+    font-weight: var(--portfolio-title-font-weight, 500);
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--portfolio-title-color, #2E2F42);
+}
+
+.concept-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
