change-background-team

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ body {
 
 /*---------------TEAM---------------*/
 .team {
-    background: #F4F4FD;
+    background: #FFFFFF;
 }
 
 .team-title {
