--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,7 @@ body {
     line-height: 1.20;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    background-color: #FFFFFF;
 }
 
 .team-text {
